# smartfolder

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_STANDARDS.md  README.md  ROADMAP.md  copilot-instructions.md  instructions.md
.github/workflows/: ci.yml
crates/smartfolder-cli/: Cargo.toml
crates/smartfolder-cli/src/: main.rs
crates/smartfolder-cli/tests/: mvp_cli.rs
crates/smartfolder-core/: Cargo.toml
crates/smartfolder-core/src/: ai.rs  apply.rs  error.rs  lib.rs  model.rs  paths.rs  planner.rs  recovery.rs  rules.rs  scanner.rs  session_store.rs  storage.rs
crates/smartfolder-gui/: Cargo.toml
crates/smartfolder-gui/src/: main.rs  preferences.rs
crates/smartfolder-gui/src/ui/: components.rs  icons.rs  mod.rs  shell.rs
crates/smartfolder-gui/src/ui/screens/: activity.rs  mod.rs  organize.rs  preview.rs  rules.rs  settings.rs
crates/smartfolder-gui/src/ui/theme/: README.md  colors.rs  mod.rs  spacing.rs  typography.rs  widgets.rs
docs/: README.md
docs/design-assets/: rc2-font-icon-review.md
docs/release/: portable-windows.md  v2-ux-release-notes.md  v2.25-ux-release-notes.md  windows-installer.md
docs/v1-mvp/: detailed-design.md  implementation-plan.md
docs/v2-roadmap/: detailed-design.md  implementation-plan.md  ux-enhancement-design.md  ux-product-vision.md  v2.25-ux-redesign-implementation-plan.md  v2.3-cli-ai-parity-implementation-plan.md
scripts/: install-windows.ps1  package-portable.ps1  register-explorer-launcher.ps1  test-mvp.ps1  uninstall-windows.ps1
