[workspace]
members = [
    "crates/smartfolder-core",
    "crates/smartfolder-cli",
]
resolver = "2"

[workspace.package]
authors = ["smartfolder contributors"]
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/kaisersoser/smartfolder"
rust-version = "1.80"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
