[package]
name = "smartfolder-cli"
description = "Command-line interface for smartfolder."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "smartfolder"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ctrlc = "3"
serde_json = "1"
smartfolder-core = { path = "../smartfolder-core" }
thiserror = "2"

[lints]
workspace = true
