[package]
name = "smartfolder-core"
description = "Core folder analysis and planning engine for smartfolder."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "smartfolder_core"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
directories = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
