[package]
name = "smartfolder-gui"
description = "Windows-first desktop GUI for smartfolder."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = "0.28"
rfd = "0.15"
smartfolder-core = { path = "../smartfolder-core" }

[lints]
workspace = true
