[package]
name = "smartfolder-gui"
description = "Windows-first desktop GUI for smartfolder."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
eframe = "0.28"
egui-phosphor = { version = "0.6", default-features = false, features = ["regular"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartfolder-core = { path = "../smartfolder-core" }

[lints]
workspace = true
